starting css styling of the menu, adding some container class and jquery script to the html

--- a/index.html
+++ b/index.html
@@ -4,32 +4,38 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>InboundCycle</title>
+  <!-- Googles fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
+  <!-- Css scripts -->
+  <link href="css/reset.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
-    <!-- Logotype -->
-    <img src="img/inboundcycle-logo.png" class="logotype" alt="InboundCycle">
-    <!-- Social Icons -->
-    <ul class="social-icons">
-      <li>
-        <a href="https://www.facebook.com/InboundCycle" target="_blank" title="Visita nuestra cuenta de Facebook de InboundCycle">
-          <i class="fa fa-facebook-square"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/inboundcycle" target="_blank" title="Visitar el Twitter de InboundCycle">
-          <i class="fa fa-twitter-square"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/company/2387654" target="_blank" title="Visitar el LinkedIn de InboundCycle">
-          <i class="fa fa-linkedin-square"></i>
-        </a>
-      </li>
-    </ul>
+    <div class="headerMenu container">
+      <!-- Logotype -->
+      <img src="img/inboundcycle-logo.png" class="logotype" alt="InboundCycle">
+      <!-- Social Icons -->
+      <ul class="social-icons">
+        <li>
+          <a href="https://www.facebook.com/InboundCycle" target="_blank" title="Visita nuestra cuenta de Facebook de InboundCycle">
+            <i class="fa fa-facebook-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/inboundcycle" target="_blank" title="Visitar el Twitter de InboundCycle">
+            <i class="fa fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/company/2387654" target="_blank" title="Visitar el LinkedIn de InboundCycle">
+            <i class="fa fa-linkedin-square"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </header>
   <!-- Separator Image -->
   <div class="separator-image"></div>
@@ -89,4 +95,6 @@
       <p>¡Muchas gracias!</p>
     </div>
   </div>
+  <!-- JS Scripts -->
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </body>
