finishing the banner, including book positionning and starting form aside css configuration

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Separator Image -->
   <div class="separator-image"></div>
   <!-- Container -->
-  <div class="wrapper">
+  <div class="wrapper container">
     <section>
       <!-- Ebook -->
       <img src="img/ebook.png" class="ebook" alt="E-book genérico de InboundCycle">
