popup functionality enhanced. Update responsive version of the popup

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="popup">
     <div class="caption">
       <i class="fa fa-times"></i>
-      <p>¡Muchas gracias!</p>
+      <p>Thank you very much for sending your application! See you soon!</p>
     </div>
   </div>
   <!-- JS Scripts -->
